Fixed Table spacing with canvas

--- a/Team07F15.css
+++ b/Team07F15.css
@@ -25,13 +25,12 @@ td {
 	border: 1px solid black;
 	
 }
+tr{
+	height:50px;
+}
 img {
 	width: 100%;
 	height: 100%;
-}
-td {
-	height: 50px;
-	width: 50px;
 }
 canvas {
 	padding: 0px;
